# Blockchain-Projects

./: Task2_explaination.txt  Task6_solution.txt
Task1_TokenProject/: README.md  hardhat.config.js  package-lock.json  package.json
Task1_TokenProject/contracts/: MyToken.sol
Task1_TokenProject/test/: MyToken.js  deploy.js
Task1_TokenProject/test/scripts/: interact.js  operations.js
Task3_cli_wallet/: Cargo.toml
Task3_cli_wallet/src/: main.rs
Task4_parachain-template/: Cargo.toml
Task4_parachain-template/pallets/pallet-voting/: Cargo.toml
Task4_parachain-template/pallets/pallet-voting/src/: lib.rs
Task4_parachain-template/runtime/src/: lib.rs
task5_tokenfrontend/: package-lock.json  package.json
task5_tokenfrontend/src/: App.css  App.js  config.js
